--- a/ex_3-DOM-intro/ex05/index.html
+++ b/ex_3-DOM-intro/ex05/index.html
@@ -6,27 +6,23 @@
   </head>
   <body>
     <div class="conteneur">
-      <img src="images/image1.jpg" id="image1"  onmouseover="mouseOverImage(1)"/>
-      <img src="images/image2.jpg" id="image2"  onmouseover="mouseOverImage(2)"/>
-      <img src="images/image3.jpg" id="image3"  onmouseover="mouseOverImage(3)"/>
-      <img src="images/image4.jpg" id="image4"  onmouseover="mouseOverImage(4)"/>
-      <img src="images/image5.jpg" id="image5"  onmouseover="mouseOverImage(5)"/>
+      <img src="images/image1.jpg" id="image1" />
+      <img src="images/image2.jpg" id="image2" />
+      <img src="images/image3.jpg" id="image3" />
+      <img src="images/image4.jpg" id="image4" />
+      <img src="images/image5.jpg" id="image5" />
     </div>
-    <script>
-     function mouseOverImage(e) {
-     switch (e) {
-       case 1: document.getElementById("image1").src = "images/image1_2.jpg"
-       break;
-       case 2: document.getElementById("image2").src = "images/image2_2.jpg";
-       break;
-       case 3: document.getElementById("image3").src = "images/image3_2.jpg";
-       break;
-       case 4: document.getElementById("image4").src = "images/image4_2.jpg";
-       break;
-       case 5: document.getElementById("image5").src = "images/image5_2.jpg";
-       break;
-     }
-     }   
+    <script> 
+      var images = document.getElementsByTagName("img");
+      for (let i=0; i < images.length; i++){
+          images[i].onmouseover = function() {
+          images[i].src = "images/" + images[i].id + "_2.jpg";
+        };
+        
+          images[i].onmouseout = function() {
+          images[i].src = "images/" + images[i].id + ".jpg";
+          }
+        }
     </script>
   </body>
 </html>
