--- a/ex-7-canvas/index.html
+++ b/ex-7-canvas/index.html
@@ -7,8 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <canvas id="mon_canvas" width="800px" height="500px" style="border: 1px solid black"></canvas>
-
+    <canvas id="flag" width="1200px" height="250px"></canvas>
+    <canvas id="boat" width="1200px" height="550px"></canvas>
+    <canvas id="house" width="1200px" height="750px"></canvas>
     <script src="script.js"></script> 
 </body>
 </html>
