--- a/js-datavisualisation-challenge/index.html
+++ b/js-datavisualisation-challenge/index.html
@@ -2162,6 +2162,8 @@
 
     <!--END PAGE-->
   </div>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+  <script src="assets/jquery.tabletojson.js"></script>
   <script src="assets/d3.js"></script>
   <script src="http://d3js.org/d3.v4.min.js"></script>
   <script src="http://dimplejs.org/dist/dimple.v2.3.0.min.js"></script>
