--- a/js-datavisualisation-challenge/index.html
+++ b/js-datavisualisation-challenge/index.html
@@ -1502,6 +1502,8 @@
                 <span class="mw-headline" id="Homicides">Homicides</span>
               </h4>
 
+              <div id="chartContainer1"></div>
+
               <table cellspacing="0" cellpadding="0" id="table2">
                 <caption>Population carcérale, moyenne par an, 2007–09 et 2010–12
                   <br> (pour 100 000 habitants)</caption>
@@ -2163,11 +2165,12 @@
     <!--END PAGE-->
   </div>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
-  <script src="assets/jquery.tabletojson.js"></script>
   <script src="assets/d3.js"></script>
   <script src="http://d3js.org/d3.v4.min.js"></script>
   <script src="http://dimplejs.org/dist/dimple.v2.3.0.min.js"></script>
+  <script src="assets/graphic-1.js"></script>
   <script src="assets/graphic-2.js"></script>
+  <!-- <script src="graphic-recover.js"></script> -->
 </body>
 
 </html>
