--- a/js-datavisualisation-challenge/index.html
+++ b/js-datavisualisation-challenge/index.html
@@ -2166,10 +2166,11 @@
   </div>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
   <script src="assets/d3.js"></script>
-  <script src="http://d3js.org/d3.v4.min.js"></script>
+  <script src="https://d3js.org/d3.v4.min.js"></script>
   <script src="http://dimplejs.org/dist/dimple.v2.3.0.min.js"></script>
   <script src="assets/graphic-1.js"></script>
   <script src="assets/graphic-2.js"></script>
+  <script src="assets/graphic-3.js"></script>
   <!-- <script src="graphic-recover.js"></script> -->
 </body>
 
