--- a/js-datavisualisation-challenge/index.html
+++ b/js-datavisualisation-challenge/index.html
@@ -2169,6 +2169,8 @@
   <script src="assets/d3.v4.3.0.js"></script>
   <script src="https://d3js.org/d3.v4.min.js"></script>
   <script src="https://dimplejs.org/dist/dimple.v2.3.0.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/dimple/2.3.0/dimple.latest.min.js"></script>
   <script src="assets/graphic-1.js"></script>
   <script src="assets/graphic-2.js"></script>
   <script src="assets/graphic-3.js"></script>
